# murano-agent

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  config-generator.conf  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
WindowsAgent/: App.config  PlanExecutor.cs  Program.cs  RabbitMqClient.cs  ServiceManager.cs  WindowsAgent.csproj  WindowsServiceInstaller.cs
c-demo-agent/: Makefile  amqp.h  lcfg_static.h
contrib/c-demo-agent/: Readme  lcfg_static.c  murano-agent.c  murano-agent.conf.example  producer.c  utils.c  utils.h
contrib/elements/: readme.rst
contrib/elements/murano-agent-debian/: element-deps  package-installs.yaml
contrib/windows-agent/: README.rst
contrib/windows-agent/ExecutionPlanGenerator/: ExecutionPlanGenerator.csproj  Program.cs
contrib/windows-agent/WindowsAgent/: App.config  ExecutionPlan.cs  Message.cs  MessageSource.cs  MqMessage.cs  PlanExecutor.cs  Program.cs  RabbitMqClient.cs  ServiceManager.cs  SignatureVerifier.cs  WindowsAgent.csproj  WindowsService.cs  WindowsServiceInstaller.cs  packages.config
doc/: requirements.txt
doc/source/: conf.py
etc/: agent.conf
etc/muranoagent/: README-muranoagent.conf.txt  muranoagent.conf.sample
etc/oslo-config-generator/: muranoagent.conf
muranoagent/: app.py  bunch.py  exceptions.py  execution_plan_queue.py  execution_plan_runner.py  execution_result.py  files_manager.py  opts.py  script_runner.py  util.py  validation.py  version.py  win32.py
muranoagent/cmd/: run.py
muranoagent/common/: config.py
muranoagent/common/messaging/: __init__.py  message.py  mqclient.py  subscription.py
muranoagent/executors/: __init__.py  chef_puppet_executor_base.py
muranoagent/executors/application/: __init__.py
muranoagent/executors/chef/: __init__.py
muranoagent/executors/puppet/: __init__.py
muranoagent/openstack/common/: eventlet_backdoor.py  gettextutils.py  importutils.py  jsonutils.py  log.py  loopingcall.py  service.py  strutils.py  (+2 more)
python-agent/: MANIFEST.in  README.rst  requirements.txt  setup-centos.sh  setup.cfg  setup.sh  tox.ini
python-agent/etc/: agent.conf
python-agent/init.d/: murano-agent-deb  murano-agent-el6
python-agent/muranoagent/: app.py  config.py  exceptions.py  execution_plan_queue.py  execution_result.py  files_manager.py  script_runner.py
releasenotes/notes/: drop-py-2-7-33ea9091c6530815.yaml  fix-1591614-1b2db4cbb41f411c.yaml  install-chef-d67f115c0958c116.yaml  python3-54ba2f6e70795ba6.yaml  python3-base64-usage-aeef2270be7bdf26.yaml
releasenotes/source/: conf.py  index.rst
tools/: install_venv.py
tools/config/: README  check_uptodate.sh  generate_sample.sh
(+26 files in other folders)
