[metadata]
name = murano-agent
summary = Python Murano Agent
description-file =
    README.rst
license = Apache License, Version 2.0
author = Mirantis, Inc.
author-email = openstack-dev@lists.openstack.org
home-page = htts://launchpad.net/murano
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    muranoagent

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    muranoagent = muranoagent.cmd.run:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
cover-package = muranoagent
cover-html = true
cover-erase = true
